--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="css/estilos2.css">
 </head>
 <body>
-
+<main>
+    <h1>Divas del Soul</h1>
+</main>
 <section id="aretha">
     <div  class="c1"></div>
 </section>
@@ -19,5 +21,8 @@
 <section id="etta">
     <div  class="c4"></div>
 </section>
+
+<script src="js/jquery-3.3.1.min.js"></script>
+<script src="js/accion2.js"></script>
 </body>
 </html>
