--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 <main>
     <h1>Divas del Soul</h1>
 </main>
-<section id="aretha">
+<section id="aretha" data-texto="Aretha">
     <div  class="c1"></div>
 </section>
-<section id="diana">
+<section id="diana" data-texto="Diana">
     <div class="c2"></div>
 </section>
-<section id="dionne">
+<section id="dionne" data-texto="Dionne">
     <div class="c3"></div>
 </section>
-<section id="etta">
+<section id="etta" data-texto="Etta">
     <div  class="c4"></div>
 </section>
 
